TINY-6869: Menu items no longer squash and distort in certain situations.

--- a/modules/oxide/src/less/theme/components/menu/menu.less
+++ b/modules/oxide/src/less/theme/components/menu/menu.less
@@ -27,6 +27,7 @@
     display: inline-block;
     overflow: hidden;
     vertical-align: top;
+    white-space: pre;
     z-index: @z-index-menu;
   }
 
